git add . git commit -m "✅ Implemented FranchiseController with all endpoints and WebFlux tests. Fixed UpdateFranchiseName test. Swagger enabled and all use cases tested with mocks."